TDP-2048 TDP-2965: fix too large modal display

--- a/dataprep-webapp/src/app/components/widgets/modal/_modal.scss
+++ b/dataprep-webapp/src/app/components/widgets/modal/_modal.scss
@@ -333,22 +333,18 @@
 }
 
 .modal-open {
-  overflow: hidden;
-
   .modal {
     display: block;
 
-    .modal-window {
+    &-window {
       margin: 0;
       padding: 0;
+      width: auto;
+      overflow: auto;
     }
 
-    .modal-dialog {
-      width: auto;
+    &-content {
+      margin: 1rem auto;
     }
   }
-}
-
-.modal-closed {
-  overflow: auto;
 }
